CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file..

9 February 2009
+ Conversion
  o Categories Patch #2571605 - Eloi George : After upgrade, the
    category images were not showing. The given URL was the entire
    absolute filepath. Also ran breaker on description.
  o Photoalbum Patch #2571583 - Eloi George : convertAlbum() was not
    working because the resulting SQL query was trying to write values
    to the "comments" & "anonymous" columns, which do not exist in the
    new table. 
    convertPics() was not working because $tbl_prefix was not defined.
    The included patch fixes both problems

+ DBPager
  o class availability check added to constructor
  o getError method added
+ Form - fixed addRadioAssoc putting correct labels
+ Database - added conditional define to remove dsn from log message
  if the db connection fails.
+ Error - if error.php is not found in local config directory, it
  looks in the module's inc directory.
+ Moved conf/error.php to inc/
+ Some edits to make datepicker color neutral (i.e. gray)
+ Patch #2580629 - Eloi George : Fixed bbcode problem with smilies and
  newlines
+ Calling breaker at the end of the bbencode.
+ Link - constructor uses setLabel, setLabel allows numeric
+ Text - Patch #2571528 Eloi George - fix to getGetValues. Some
  servers returning php_self as / were fouling up directory parsing.
+ Updated: javascript/jquery/jquery.js,
  javascript/datepicker/ui.datepicker.css


4 February 2009
+ Added setSecure function to Link

29 January 2009
+ Getting file types from inc/ directory instead of config directory.
+ Using utf8 with completion check as a backup to iconv if not
  compiled.

23 January 2009
+ Extra apostrophe check added to prompt script
+ Dropped unneeded array declaration from Init.php
+ Added Format selection to fckeditor, moved buttons around,
+ Updated: javascript/prompt/default.php, javascript/editor/fckeditor/custom.js